# rknpu-driver

./: Cargo.toml
src/: configs.rs  ioctl.rs  lib.rs  memory.rs  rknpu_dev.rs  types.rs
src/registers/: mod.rs
